# ink

./: README.md
docs/superpowers/plans/: 2026-06-21-phase1-rust-ink-compiler.md  2026-06-21-phase2-definitions-parser.md
docs/superpowers/specs/: 2026-06-21-narrative-framework-design.md
narrative/: Cargo.toml  README.md  package-lock.json  package.json
narrative/crates/cli/: Cargo.toml
narrative/crates/cli/src/: main.rs
narrative/crates/compiler/: Cargo.toml
narrative/crates/compiler/src/: codegen.rs  directives_manifest.rs  json_output.rs  lib.rs  resolve.rs  runtime_types.rs  schema_output.rs
narrative/crates/compiler/tests/: conformance.rs  integration.rs  multi_output.rs
narrative/crates/def-parser/: Cargo.toml
narrative/crates/def-parser/src/: error.rs  lib.rs  types.rs  validate.rs
narrative/crates/def-parser/tests/: integration.rs  parse_tests.rs  validation_tests.rs
narrative/crates/godot-sdk/: Cargo.toml
narrative/crates/godot-sdk/src/: lib.rs
narrative/crates/ink-parser/: Cargo.toml
narrative/crates/ink-parser/src/: choices.rs  conditionals.rs  content.rs  directives.rs  divert.rs  include.rs  knot.rs  lib.rs  lists.rs  logic.rs  parser.rs  sequences.rs  statements.rs  tags.rs  whitespace.rs
narrative/crates/ink-parser/src/ir/: base.rs  choice.rs  conditional.rs  content.rs  directive.rs  divert.rs  mod.rs  (+8 more)
narrative/crates/ink-parser/tests/: basic.rs  choices.rs  directives.rs  divert.rs  features.rs  knot.rs  logic.rs  parser.rs  story_parsing.rs
narrative/crates/lsp/: Cargo.toml
narrative/crates/lsp/src/: analysis.rs  main.rs
