[package]
name = "narrative-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ink-parser = { path = "../ink-parser" }
def-parser = { path = "../def-parser" }
narrative-compiler = { path = "../compiler" }